source/docs/0.22/checks.md
---
version: 0.22
category: "Reference Docs"
title: "Checks"
next:
  url: "handlers"
  text: "Handlers"
---

# Sensu Checks

## Reference Documentation

- [What is a Sensu check?](#what-is-a-sensu-check)
  - [Sensu check specification](#sensu-check-specification)
- [Check commands](#check-commands)
  - [What is a check command?](#what-is-a-check-command)
  - [Check command arguments](#check-command-arguments)
  - [How and where are check commands executed?](#how-and-where-are-check-commands-executed)
- [Check execution platform](#check-execution-platform)
  - [How are checks scheduled?](#how-are-checks-scheduled)
    - [Subscription checks](#subscription-checks)
    - [Standalone checks](#standalone-checks)
- [Check results](#check-results)
  - [What is a check result?](#what-is-a-check-result)
  - [Example check result output](#example-check-result-output)
- [Check command tokens](#check-command-tokens)
  - [What are check command tokens?](#what-are-check-command-tokens)
  - [Example check command tokens](#example-check-command-tokens)
  - [Check command token specification](#check-command-token-specification)
    - [Command token declaration syntax](#command-token-declaration)
    - [Command token client attributes](#command-token-client-attributes)
    - [Command token alternate values](#command-token-alternate-values)
- [Check configuration](#check-configuration)
  - [Example check definition](#example-check-definition)
  - [Check definition specification](#check-definition-specification)
    - [Check name(s)](#check-names)
    - [`check` attributes](#check-attributes)
    - [`subdue` attributes](#subdue-attributes)
    - [Custom attributes](#custom-attributes)
  - [Check result specification](#check-result-specification)
    - [`check` attributes](#check-result-check-attributes)
    - [`client` attributes](#check-result-client-attributes)

## What is a Sensu check?

Sensu checks define commands run by the [Sensu client][1] which monitor a
condition (e.g. is Nginx running?) or read measurements (e.g. how much disk
space do I have left?). Although the Sensu client will attempt to execute any
command defined for a check, successful processing of check results requires
adherence to a simple specification.

### Sensu check specification

* Result data is output to [STDOUT or STDERR][2]
  * For standard checks this output is typically a human-readable message
  * For metrics checks this output contains the measurements gathered by the
    check
* Exit status code indicates state
  * `0` indicates "OK"
  * `1` indicates "WARNING"
  * `2` indicates "CRITICAL"
  * exit status codes other than `0`, `1`, or `2` indicate an "UNKNOWN" or
    custom status

_PRO TIP: Those familiar with the [Nagios][3] monitoring system may recognize
this specification, as it is the same one used by Nagios plugins. As a result,
Nagios plugins can be used with Sensu without any modification._

At every execution of a check command &ndash; regardless of success or failure
&ndash; the Sensu client publishes the check's [result][4] for eventual handling
by the [event processor][5] (i.e. the [Sensu server][6].

## Check commands

### What is a check command?

Each [Sensu check definition][7] defines a `command` and the interval at which
it  should be executed. Check commands are literally executable commands which
will be executed on the [Sensu client][1], run as the `sensu` user.

### Check command arguments

Sensu check `command` attributes may include command line arguments for
controlling the behavior of the command executable. Many [Sensu plugins][8]

### How and where are check commands executed?

As mentioned above, all check commands are executed by [Sensu clients][1] as the
`sensu` user. Commands must be executable files that are discoverable on the
Sensu client system (i.e. installed in a system [`$PATH` directory][9]).

_NOTE: By default, the Sensu installer packages will modify the system `$PATH`
for the `sensu` user to include `/etc/sensu/plugins`. As a result, executable
scripts (e.g. plugins) located in `/etc/sensu/plugins` will be valid commands.
This allows `command` attributes to use "relative paths" for Sensu plugin
commands; <br><br>e.g.: `"command": "check-http.rb -u https://sensuapp.org"`_

## Check execution platform

### How are checks scheduled?

Sensu offers two distinct check execution schedulers: the [Sensu
server](server), and the [Sensu client][10] (monitoring agent).
The Sensu server schedules and publishes check execution requests to client
subscriptions via a [Publish/Subscribe model][11] (i.e. [subscription
checks](#subscription-checks)). The Sensu client (monitoring agent) schedules and
executes [standalone checks][12] (on the local system only).
Because Sensu’s execution schedulers are not <abbr title="in other words, you
don't have to choose one or the other - you can use both">mutually
exclusive</abbr>, any Sensu client may be configured to both schedule and
execute it's own standalone checks as well as execute subscription checks
scheduled by the Sensu server.

#### Subscription checks

Sensu checks which are centrally defined and scheduled by the [Sensu server][6]
are called "subscription checks". Sensu’s use of a [message bus (transport)][13]
for communication enables [topic-based communication][14] &mdash; where messages
are published to a specific "topic", and consumers _subscribe_ to one or more
specific topics. This form of communication is commonly referred to as the
["publish-subscribe pattern"][11], or "pubsub" for short.

Subscription checks have a defined set of [subscribers][15], a list of
[transport][13] [topics][14] that check requests will be published to. Sensu
clients become subscribers to these topics (i.e. subscriptions) via their
individual [client definition][16] `subscriptions` attribute. In practice,
subscriptions will typically correspond to a specific role and/or responsibility
(e.g. a webserver, database, etc).

Subscriptions are a powerful primitives in the monitoring context because they
allow you to effectively monitor for specific behaviors or characteristics
corresponding to the function being provided by a particular system. For
example, disk capacity thresholds might be more important (or at least
different) on a database server as opposed to a webserver; conversely, CPU
and/or memory usage thresholds might be more important on a caching system than
on a file server. Subscriptions also allow you to configure check requests for
an entire group or subgroup of systems rather than require a traditional 1:1
mapping.

#### Standalone checks

Sensu checks which are defined on a [Sensu client][1] with the [check definition
attribute][17] `standalone` set to `true` are called "standalone checks". The
Sensu client provides its own [scheduler][10] for scheduling standalone checks
which ensures <abbr title='typically withing 500ms'>scheduling
consistency</abbr> between Sensu clients with identical check definitions
(assuming that system clocks are synchronized via [NTP][18]).

Standalone checks are an important complement to [subscription checks][19]
because they provide a de-centralized management alternative for Sensu.

## Check results

### What is a check result?

A check result is a [JSON][20] document published as a message on the [Sensu
transport][13] by the Sensu client upon completion of a check execution. Sensu
check results include the [check definition attributes][17] (e.g. `command`,
`subscribers`, `interval`, `name`, etc; including [custom attributes][21]), the
client name the result was submitted from, and the `output` of the check.

### Example check result output

~~~ json
{
  "check": {
    "status": 0,
    "command": "check-http.rb -u https://sensuapp.org",
    "subscribers": [
      "demo"
    ],
    "interval": 60,
    "name": "sensu-website",
    "issued": 1458934742,
    "executed": 1458934742,
    "duration": 0.637,
    "output": "CheckHttp OK: 200, 78572 bytes\n"
  },
  "client": "sensu-docs"
}
~~~

_NOTE: please refer to the [check result specification][38] (below) for more
information about about check results._

## Check command tokens

### What are check command tokens?

Sensu [check commands][22] may include [command line arguments][23] for
controlling the behavior of the check command (e.g. a [Sensu plugin][8]). Sensu
check command arguments can be used for configuring thresholds, file paths,
URLs, and credentials. In some cases, the check command arguments may need to
differ on a clieny-by-client basis in a Sensu [client subscription][15]. Sensu
check command tokens are check command argument placeholders that can be
replaced by [Sensu client definition attributes][16] (including [custom client
definition attributes][24])).

_NOTE: as Sensu check command tokens are also sometimes referred to as **"Sensu
client overrides"**; a reference to the fact that command tokens allow client
attributes to "override" [check command arguments][23]._

### Example check command tokens

The following is an example Sensu [check definition][17], which is using two
check command tokens for [check command arguments][23]. In this example, the
`check-disk-usage.rb` command accepts `-w` (warning) and `-c` (critical)
arguments to indicate the thresholds (as percentages) for creating warning or
critical events. As configured, this check will create a warning event at 80%
disk capacity, unless a different threshold is provided by the client definition
(i.e. `:::disk.warning|80:::`); and a critical event will be created if disk
capacity reaches 90%, unless a different threshold is provided by the client
definition (i.e. `:::disk.critical|90:::`).

~~~ json
{
  "checks": {
    "check_disk_usage": {
      "command": "check-disk-usage.rb -w :::disk.warning|80::: -c :::disk.critical|90:::",
      "subscribers": [
        "production"
      ],
      "interval": 60
    }
  }
}
~~~

The following example [Sensu client definition][16] would provide the necessary
attributes to override the `disk.warning` and `disk.critical` tokens declared
above.

~~~ json
{
  "client": {
    "name": "i-424242",
    "address": "10.0.2.100",
    "subscriptions": [
      "production",
      "webserver",
      "mysql"
    ],
    "disk": {
      "warning": 75,
      "critical": 85
    }
  }
}
~~~

### Check command token specification

Sensu check command tokens provide access to [Sensu client definition
attributes][16] via "dot notation" (e.g. `disk.warning`).

#### Command token declaration syntax

Command tokens are declared by wrapping [client attributes][25] with "triple
colons" (i.e. three colon characters, i.e. `:::`).

##### Examples {#command-token-declaration-examples}

- `:::address:::` would be replaced with the [client `address` attribute][26]
- `:::url:::` would be replaced with a [custom attribute][24] called `url`

#### Command token client attributes

Command token attributes are "dot notation" references to [Sensu client
definition attributes][16].

##### Examples {#command-token-client-attributes-examples}

- `:::address:::` would be replaced with the [client `address` attribute][26]
- `:::disk.warning:::` would be replaced with a [custom attribute][24] called
  `warning` nested inside of a JSON hash called `disk`

#### Command token alternate values

Command token alternate values can be used as a fallback in the event that no a
[command token client attribute][25] is not provided by the [client
definition][16]. Command token alternate values are separated by a pipe
character (`|`), and can be used to provide a "default values" for clients that
are missing the declared token attribute.

##### Examples {#command-token-alternate-values}

- `:::url|https://sensuapp.org:::` would be replaced with a [custom
  attribute][24] called `url`. If no such attribute called `url` is included in
  the client definition, the alternate (or default) value of
  `https://sensuapp.org` will be used.

_NOTE: if a command token alternate value is not provided (i.e. as a default
value), and the Sensu client definition does not have a matching [command token
client attribute][25], a [check result][4] indicating unmatched tokens will be
published for the check execution (e.g.: `"Unmatched command tokens:
disk.warning"`)_

## Check configuration

### Example check definition

The following is an example Sensu check definition, a JSON configuration file
located at `/etc/sensu/conf.d/check-sensu-website.json`. This check definition
uses a [Sensu plugin][27] named [`check-http.rb`][28] to ensure that the Sensu
website is still available. The check is named `sensu-website` and it runs on
Sensu clients with the `production` [subscription][15], at an `interval` of 60
seconds.

~~~ json
{
  "checks": {
    "sensu-website": {
      "command": "check-http.rb -u https://sensuapp.org",
      "subscribers": [
        "production"
      ],
      "interval": 60
    }
  }
}
~~~

### Check definition specification

#### Check names(s) {#check-names}

Each check definition has a unique check name, used for the definition key.
Every check definition is within the `"checks": {}` [definition scope][29].

- A unique string used to name/identify the check
- Cannot contain special characters or spaces
- Validated with [Ruby regex][30] `/^[\w\.-]+$/.match("check-name")`

#### `check` attributes

type
: description
  : The check type, either `standard` or `metric`. Setting type to `metric` will
    cause OK (exit 0) check results to create events.
: required
  : false
: type
  : String
: allowed values
  : `standard`, `metric`
: default
  : `standard`
: example
  : ~~~ shell
    "type": "metric"
    ~~~

command
: description
  : The check command to be executed.
: required
  : true (unless `extension` is configured)
: type
  : String
: example
  : ~~~ shell
    "command": "/etc/sensu/plugins/check-chef-client.rb"
    ~~~

extension
: description
  : The name of a Sensu check extension to run instead of a command. This is an
    _advanced feature_ and is not commonly used.
: required
  : true (unless `command` is configured)
: type
  : String
: example
  : ~~~ shell
    "extension": "system_profile"
    ~~~

standalone
: description
  : If the check is scheduled by the local Sensu client instead of the Sensu
    server (standalone mode).
: required
  : false
: type
  : Boolean
: default
  : false
: example
  : ~~~ shell
    "standalone": true
    ~~~

subscribers
: description
  : An array of Sensu client subscriptions that check requests will be sent to.
    The array cannot be empty and its items must each be a string.
: required
  : true (unless `standalone` is `true`)
: type
  : Array
: example
  : ~~~ shell
    "subscribers": ["production"]
    ~~~

publish
: description
  : If check requests are published for the check.
: required
  : false
: type
  : Boolean
: default
  : true
: example
  : ~~~ shell
    "publish": false
    ~~~

interval
: description
  : The frequency in seconds the check is executed.
: required
  : true (unless `publish` is `false`)
: type
  : Integer
: example
  : ~~~ shell
    "interval": 60
    ~~~

timeout
: description
  : The check execution duration timeout in seconds (hard stop).
: required
  : false
: type
  : Integer
: example
  : ~~~ shell
    "timeout": 30
    ~~~

ttl
: description
  : The time to live (TTL) in seconds until check results are considered stale.
    If a client stops publishing results for the check, and the TTL expires, an
    event will be created for the client. The check `ttl` must be greater than
    the check `interval`, and should accommodate time for the check execution and
    result processing to complete. For example, if a check has an `interval` of
    `60` (seconds) and a `timeout` of `30` (seconds), an appropriate `ttl` would
    be a minimum of `90` (seconds).
: required
  : false
: type
  : Integer
: example
  : ~~~ shell
    "ttl": 100
    ~~~

handle
: description
  : If events created by the check should be handled.
: required
  : false
: type
  : Boolean
: default
  : true
: example
  : ~~~ shell
    "handle": "false"
    ~~~

handler
: description
  : The Sensu event handler (name) to use for events created by the check.
: required
  : false
: type
  : String
: example
  : ~~~ shell
    "handler": "pagerduty"
    ~~~

handlers
: description
  : An array of Sensu event handlers (names) to use for events created by the
    check. Each array item must be a string.
: required
  : false
: type
  : Array
: example
  : ~~~ shell
    "handlers": ["pagerduty", "email"]
    ~~~

low_flap_threshold
: description
  : The flap detection low threshold (% state change) for the check. Sensu uses
    the same [flap detection algorithm as Nagios][31].
: required
  : false
: type
  : Integer
: example
  : ~~~ shell
    "low_flap_threshold": 20
    ~~~

high_flap_threshold
: description
  : The flap detection high threshold (% state change) for the check. Sensu uses
    the same [flap detection algorithm as Nagios][31].
: required
  : true (if `low_flap_threshold` is configured)
: type
  : Integer
: example
  : ~~~ shell
    "high_flap_threshold": 60
    ~~~

source
: description
  : The check source, used to create a [JIT Sensu client][32] for an external
    resource (e.g. a network switch).
: required
  : false
: type
  : String
: validated
  : `/^[\w\.-]+$/`
: example
  : ~~~ shell
    "source": "switch-dc-01"
    ~~~

aggregate
: description
  : Create a result aggregate for the check. Check result data will be
    aggregated and exposed via the [Sensu Aggregates API][33]. This feature does
    not work with `standalone` checks.
: required
  : false
: type
  : Boolean
: default
  : false
: example
  : ~~~ shell
    "aggregate": true
    ~~~

subdue
: description
  : A set of attributes that determine when a check is subdued.
: required
  : false
: type
  : Hash
: example
  : ~~~ shell
    "subdue": {}
    ~~~

#### `subdue` attributes

The following attributes are configured within the `"subdue": {}` check
definition attribute scope.

at
: description
  : Where the check is subdued, either `publisher` or `handler`, at the check
    request publisher or event handler.
: required
  : false
: type
  : String
: allowed values
  : `publisher`, `handler`
: example
  : ~~~ shell
    "at": "handler"
    ~~~

days
: description
  : An array of days of the week the check is subdued. Each array item must be a
    string and a valid day of the week.
: required
  : false
: type
  : Array
: example
  : ~~~ shell
    "days": ["monday", "wednesday"]
    ~~~

begin
: description
  : Beginning of the time window when the check is subdued. Parsed by Ruby's
    `Time.parse()`. Time may include a time zone.
: required
  : true
: type
  : String
: example
  : ~~~ shell
    "begin": "5PM PST"
    ~~~

end
: description
  : End of the time window when the check is subdued. Parsed by Ruby's
    `Time.parse()`. Time may include a time zone.
: required
  : true
: type
  : String
: example
  : ~~~ shell
    "end": "9AM PST"
    ~~~

exceptions
: description
  : Subdue time window (`begin`, `end`) exceptions. An array of time window
    exceptions. Each array item must be a hash containing valid `begin` and
    `end` times.
: required
  : false
: type
  : Array
: example
  : ~~~ shell
    "exceptions": [{"begin": "8PM PST", "end": "10PM PST"}]
    ~~~

#### Custom attributes

Because Sensu configuration is just JSON data, it is possible to define
configuration attributes that are not part of the Sensu [check definition
specification][17]. Custom check definition attributes may be defined to provide
context about the check, or to control or modify check `command` or `handler`
behaviors. Custom check definition attributes will be included in [check
results][4] and [event data][40]. Some great example use cases for custom check
definition attributes are links to playbook documentation (i.e. "here's a link
to some instructions for how to fix this if it's broken"), [contact
routing][36], and metric graph image URLs.

##### EXAMPLE

The following is an example Sensu check definition that a custom definition
attribute, `"playbook"`, a URL for documentation to aid in the resolution of
events for the check. The playbook URL will be available in [event data][34] and
thus able to be included in event notifications (e.g. email).

~~~ json
{
  "checks": {
    "check_mysql_replication": {
      "command": "check-mysql-replication-status.rb --user sensu --password secret",
      "subscribers": [
        "mysql"
      ],
      "interval": 30,
      "playbook": "http://docs.example.com/wiki/mysql-replication-playbook"
    }
  }
}
~~~

### Check result specification

See [check results][4] (above) for more information about check results,
including an [example check result][37].

#### `check` attributes {#check-result-check-attributes}

status
: description
  : The check execution exit status code. An exit status code of `0` (zero)
    indicates `OK`, `1` indicates `WARNING`, and `2` indicates `CRITICAL`; exit
    status codes other than `0`, `1`, or `2` indicate an `UNKNOWN` or custom
    status.
: type
  : Integer
: example
  : ~~~ shell
    "status": 0
    ~~~

command
: description
  : The command as [provided by the check definition][17].
: type
  : String
: example
  : ~~~ shell
    "command": "check-http.rb -u https://sensuapp.org"
    ~~~

subscribers
: description
  : The check subscribers as [provided by the check definition][17].
: type
  : Array
: example
  : ~~~ shell
    "subscribers": ["database_servers"]
    ~~~

interval
: description
  : The check interval in seconds, as [provided by the check definition][17]
: type
  : Integer
: example
  : ~~~ shell
    "interval": 60
    ~~~


name
: description
  : The check name, as [provided by the check definition][17]
: type
  : String
: example
  : ~~~ shell
    "name": "sensu-website"
    ~~~


issued
: description
  : The time the check request was issued (by the [Sensu server][6] or
    [client][1]), stored as an integer (i.e. `Time.now.to_i`)
: type
  : Integer
: example
  : ~~~ shell
    "issued": 1458934742
    ~~~

executed
: description
  : The time the check request was executed by the [Sensu client][1], stored as
    and integer (i.e. `Time.now.to_i`).
: type
  : Integer
: example
  : ~~~ shell
    "executed": 1458934742
    ~~~

duration
: description
  : The amount of time (in seconds) it took for the [Sensu client][1] to execute
    the check.
: type
  : Float
: example
  : ~~~ shell
    "duration": 0.637
    ~~~

output
: description
  : The output produced by the check `command`.
: type
  : String
: example
  : ~~~ shell
    "output": "CheckHttp OK: 200, 78572 bytes\n"
    ~~~


#### `client` attributes {#check-result-client-attributes}

name
: description
  : The name of the [Sensu client][1] that generated the check result. The Sensu
    server will use the client `name` value to fetch the corresponding client
    attributes from the [Clients API][39] and add them to the resulting [Sensu
    event][34] for context.
: type
  : String
: example
  : ~~~ shell
    "output": "i-424242"
    ~~~


[?]:  #
[1]:  clients
[2]:  https://en.wikipedia.org/wiki/Standard_streams
[3]:  https://www.nagios.org/
[4]:  #check-results
[5]:  architecture#event-processor
[6]:  server
[7]:  #check-configuration
[8]:  plugins
[9]:  https://en.wikipedia.org/wiki/PATH_(variable)
[10]: clients#standalone-check-execution-scheduler
[11]: https://en.wikipedia.org/wiki/Publish%E2%80%93subscribe_pattern
[12]: #standalone-checks
[13]: transport
[14]: https://en.wikipedia.org/wiki/Publish%E2%80%93subscribe_pattern#Message_filtering
[15]: clients#client-subscriptions
[16]: clients#client-definition-specification
[17]: #check-definition-specification
[18]: http://www.ntp.org/
[19]: #subscription-checks
[20]: http://www.json.org/
[21]: #custom-attributes
[22]: #check-commands
[23]: #check-command-arguments
[24]: clients#custom-attributes
[25]: #command-token-client-attributes
[26]: clients#client-attributes
[27]: https://sensuapp.org/plugins
[28]: https://github.com/sensu-plugins/sensu-plugins-http
[29]: configuration#configuration-scopes
[30]: http://ruby-doc.org/core-2.2.0/Regexp.html
[31]: https://assets.nagios.com/downloads/nagioscore/docs/nagioscore/3/en/flapping.html
[32]: clients#proxy-clients
[33]: api-aggregates
[34]: events
[35]: handlers
[36]: enterprise-contact-routing
[37]: #example-check-result-output
[38]: #check-result-specification
[39]: api-clients
[40]: events#event-data
